--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ nav ul li a:hover {
 
     <nav>
         <ul>
-            <li><a href="index.html">Головна</a></li>
+            <li><a href="https://ruyriy.github.io/Audio-christ/">Головна</a></li>
             <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
             <li><a href="video_other.html">Другі відео :</a></li>
             <ul>               
