--- a/video_max.html
+++ b/video_max.html
@@ -183,14 +183,14 @@ nav ul li a:hover {
                 <li><a href="#praise_the_lord">Прославлення Господа</a></li>
                 <li><a>Проповідники :</a>
                     <ul>
-                        <li><a href="#marioha">Марйоха</a></li>
-                        <li><a href="#mischenko">Міщенко</a></li>
-                        <li><a href="#buligin">Булигін</a></li>
-                        <li><a href="#zinchenko">Зінченко</a></li>
-                        <li><a href="#laba">Лаба</a></li>
-                        <li><a href="#parfylo">Парфило</a></li>
-                        <li><a href="#komisar">Комісар</a></li>
-                        <li><a href="#ivanchenko">Іванченко</a></li>
+                        <li><a href="#marioha">Марйоха М.П.</a></li>
+                        <li><a href="#mischenko">Міщенко А.</a></li>
+                        <li><a href="#buligin">Булигін А.П.</a></li>
+                        <li><a href="#zinchenko">Зінченко В.</a></li>
+                        <li><a href="#laba">Лаба В.В.</a></li>
+                        <li><a href="#parfylo">Парфило А.</a></li>
+                        <li><a href="#komisar">Комісар С.</a></li>
+                        <li><a href="#ivanchenko">Іванченко О.</a></li>
                     </ul>
                 </li>
                 <li><a href="#youth_praise">Прославлення, Молодіжна</a></li>
@@ -256,7 +256,7 @@ nav ul li a:hover {
 <div class="content-section" id="zinchenko">
     <h2>
         <img src="images/video7-icon.jpg" alt="Аватар " class="video-avatar">
-        <a>Зінченко</a>
+        <a>Зінченко Віталій</a>
     </h2>
     <ul class="video-links" data-group="Зінченко"></ul>
 </div>
@@ -264,7 +264,7 @@ nav ul li a:hover {
 <div class="content-section" id="laba">
     <h2>
         <img src="images/video6-icon.jpg" alt="Аватар " class="video-avatar">
-        <a>Лаба</a>
+        <a>Лаба Віктор Васильович</a>
     </h2>
     <ul class="video-links" data-group="Лаба"></ul>
 </div>
@@ -272,7 +272,7 @@ nav ul li a:hover {
 <div class="content-section" id="parfylo">
     <h2>
         <img src="images/video4-icon.jpg" alt="Аватар " class="video-avatar">
-        <a>Парфіло</a>
+        <a>Парфіло Андрій</a>
     </h2>
     <ul class="video-links" data-group="Парфило"></ul>
 </div>
@@ -288,7 +288,7 @@ nav ul li a:hover {
 <div class="content-section" id="ivanchenko">
     <h2>
         <img src="images/video5-icon.jpg" alt="Аватар " class="video-avatar">
-        <a>Іванченко</a>
+        <a>Іванченко Олександр</a>
     </h2>
     <ul class="video-links" data-group="Іванченко"></ul>
 </div>
